feat: rotate invite code feature
